incluindo o componente LoggedIn

--- a/src/paginas/home/home.css
+++ b/src/paginas/home/home.css
@@ -10,3 +10,11 @@
     display: block;
     margin: 0 auto;
 }
+.btnCont{
+    display: flex;
+    justify-content: space-around;
+}
+.btn{
+    margin-right: 10px;
+    font-size: 20px;
+}
